--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: action/checkout@v4
+      - uses: actions/checkout@v4
       - run: make setup
       - run: make test
       - run: make linter
