--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: hexlet-components/hello-from-hexlet-action@release
       - run: make setup
       - run: make test
-      #- run: make linter
+      - run: make lint
 
